Change splash image

--- a/web/index.html
+++ b/web/index.html
@@ -64,8 +64,8 @@
 
       #loading img {
         animation: 1s ease-in-out 0s infinite alternate breathe;
-        opacity: .66;
         transition: opacity .4s;
+        width: 128px;
       }
 
       #loading.main_done img {
@@ -93,11 +93,11 @@
         }
 
         to {
-          transform: scale(4)
+          transform: scale(2)
         }
       }
     </style>
-    <img src="favicon.ico" />
+    <img src="icons/android-chrome-192x192.png" />
   </div>
   <script>
     window.addEventListener('load', function(ev) {
