--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="./">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -107,23 +107,24 @@
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        // onEntrypointLoaded: function(engineInitializer) {
-        //   engineInitializer.initializeEngine().then(function(appRunner) {
-        //     appRunner.runApp();
-        //   });
-        // }
-      }).then(function (engineInitializer) {
-        loading.classList.add('main_done');
-        return engineInitializer.initializeEngine();
-      }).then(function (appRunner) {
-        loading.classList.add('init_done');
-        return appRunner.runApp();
-      }).then(function (app) {
-        // Wait a few milliseconds so users can see the "zoooom" animation
-        // before getting rid of the "loading" div.
-        window.setTimeout(function () {
-          loading.remove();
-        }, 200);
+        onEntrypointLoaded: function(engineInitializer) {
+          // loading.classList.add('main_done');
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
+        }
+      // }).then(function (engineInitializer) {
+      //   loading.classList.add('main_done');
+      //   return engineInitializer.initializeEngine();
+      // }).then(function (appRunner) {
+      //   loading.classList.add('init_done');
+      //   return appRunner.runApp();
+      // }).then(function (app) {
+      //   // Wait a few milliseconds so users can see the "zoooom" animation
+      //   // before getting rid of the "loading" div.
+      //   window.setTimeout(function () {
+      //     loading.remove();
+      //   }, 200);
       });
     });
   </script>
