--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="./">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -97,7 +97,8 @@
         }
       }
     </style>
-    <img src="icons/android-chrome-192x192.png" />
+    <!-- <img src="icons/android-chrome-192x192.png" /> -->
+    <img src="icons/sun-christmas-192.png" />
   </div>
   <script>
     window.addEventListener('load', function(ev) {
