Disable christmas mode

--- a/web/index.html
+++ b/web/index.html
@@ -97,8 +97,8 @@
         }
       }
     </style>
-    <!-- <img src="icons/android-chrome-192x192.png" /> -->
-    <img src="icons/sun-christmas-192.png" />
+    <img src="icons/android-chrome-192x192.png" />
+    <!-- <img src="icons/sun-christmas-192.png" /> -->
   </div>
   <script>
     window.addEventListener('load', function(ev) {
